# differentiation

./: package-lock.json  package.json
backend/: CMakeLists.txt
backend/src/: main.cpp
backend/src/algorithm/sorting/: QuickSortAlgorithm.h  quicksort.cpp
backend/src/api/: server.cpp
backend/src/benchmark/: BenchmarkEngine.cpp  BenchmarkEngine.h  BenchmarkResult.h  route.js
backend/src/core/: Algorithm.h  AlgorithmRegistry.cpp  AlgorithmRegistry.h
src/: middleware.js
src/app/benchmark/: page.js
src/components/: navbar.js
src/components/ui/: CodeSnippetContainer.jsx
src/config/: backend.js
